<resources>
    <string name="app_name">FuelLog</string>
    <string name="action_settings">Settings</string>

    <string name="AppTitle">Fuel Log</string>

    <string name="strDate">Date</string>
    <string name="hintDate">Refill Date</string>

    <string name="strKMS">Distance (kms)</string>
    <string name="hintKMS">Distance on last tank</string>

    <string name="strTotal">Total kms</string>
    <string name="hintTotal">Total kms travelled</string>

    <string name="strRate">Fuel Burn</string>
    <string name="hintRate">Measured Fuel burn rate</string>

    <string name="strSave">Save</string>
    <string name="strExit">Exit</string>
    <string name="save">Save</string>

</resources>